--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,9 @@
-<!--<android.support.v4.widget.DrawerLayout-->
-
-<!--xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:id="@+id/drawerLayout"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent">-->
-
-<!--<include layout="@layout/toolbar" />-->
-
-<!--&lt;!&ndash; navigation drawer &ndash;&gt;--><!--<RelativeLayout--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:layout_gravity="left|start"--><!--android:background="#fff">-->
-
-<!--<ListView--><!--android:id="@+id/left_drawer"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:background="#fff"--><!--android:divider="#eee"--><!--android:dividerHeight="1dp" />--><!--</RelativeLayout>-->
-
-<!--</android.support.v4.widget.DrawerLayout>-->
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:clickable="true">
 
 
     <android.support.v4.widget.DrawerLayout
@@ -24,30 +12,31 @@
         android:layout_height="fill_parent"
 
         android:background="@color/background_material_light">
-        <!--android:layout_below="@+id/toolbar"-->
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
 
+            <!-- Application toolbar-->
             <include
                 android:id="@+id/toolbar"
                 layout="@layout/toolbar" />
 
         </LinearLayout>
-        <!-- Application toolbar-->
 
 
         <!-- The main content view -->
-        <FrameLayout
+        <LinearLayout
             android:id="@+id/content_frame"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:orientation="vertical" />
 
-
-        <ListView
+        <!--Navigation Drawer-->
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/left_drawer"
-            android:layout_width="240dp"
+            class="android.support.v7.widget.RecyclerView"
+            android:layout_width="320dp"
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:background="#333"
@@ -56,4 +45,5 @@
             android:dividerHeight="0dp" />
 
     </android.support.v4.widget.DrawerLayout>
+
 </RelativeLayout>
