--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,6 @@
     android:layout_height="match_parent"
     tools:context="org.eecs499.russtrup.ketchup.LoginFragment">
 
-    <!-- TODO: Update blank fragment layout -->
 
     <EditText
         android:id="@+id/login_fragment_email"
@@ -14,7 +13,10 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:hint="email address"
-        android:textColorHint="@color/appAccent" />
+        android:inputType="textEmailAddress"
+        android:textStyle="normal" >
+        <requestFocus />
+        </EditText>
 
     <EditText
         android:id="@+id/login_fragment_password"
@@ -26,7 +28,7 @@
         android:ems="10"
         android:hint="password"
         android:inputType="textPassword"
-        android:textColorHint="@color/appAccent" />
+        android:typeface="normal" />
 
     <TextView
         android:id="@+id/login_fragment_submit"
