--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -4,17 +4,18 @@
     android:layout_height="match_parent"
     tools:context="org.eecs499.russtrup.ketchup.LoginFragment">
 
-    <!-- TODO: Update blank fragment layout -->
 
     <EditText
         android:id="@+id/signup_fragment_email"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:hint="email address"
-        android:textColorHint="@color/appAccent"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:inputType="textEmailAddress" >
+        <requestFocus />
+        </EditText>
 
     <EditText
         android:id="@+id/signup_fragment_password1"
@@ -25,8 +26,7 @@
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="password"
-        android:inputType="textPassword"
-        android:textColorHint="@color/appAccent" />
+        android:inputType="textPassword" />
 
     <EditText
         android:id="@+id/signup_fragment_password2"
@@ -37,20 +37,19 @@
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="retype password"
-        android:inputType="textPassword"
-        android:textColorHint="@color/appAccent" />
+        android:inputType="textPassword" />
 
     <TextView
         android:id="@+id/signup_fragment_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/signup_fragment_password2"
+        android:layout_below="@+id/signup_fragment_password2"
+        android:layout_marginEnd="10dp"
         android:layout_marginTop="20dp"
+        android:clickable="true"
         android:text="Sign Up"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/appAccent"
-        android:textSize="25sp"
-        android:layout_marginRight="10dp"
-        android:clickable="true"
-        android:layout_below="@+id/signup_fragment_password2"
-        android:layout_alignEnd="@+id/signup_fragment_password2" />
+        android:textSize="25sp" />
 </RelativeLayout>
