--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".LoginActivity">
 
 
@@ -16,11 +15,9 @@
             android:id="@+id/login_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="69dp"
-            android:text="Ketchup"
+            android:text="@string/app_name"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="@color/appAccent"
             android:textSize="50sp" />
@@ -29,8 +26,6 @@
             android:id="@+id/login_buttons_layout"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/login_header"
             android:layout_marginTop="60dp"
             android:orientation="horizontal"
             android:weightSum="1">
@@ -39,17 +34,16 @@
                 android:id="@+id/signup_button"
                 android:layout_width="fill_parent"
                 android:layout_height="50dp"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/login_header"
                 android:layout_weight=".495"
                 android:background="@color/appRedDark"
                 android:clickable="true"
-                android:gravity="center_vertical|center_horizontal"
-                android:text="Sign Up"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
 
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:focusable="false"
-                android:onClick="loadSignupFragment" />
+                android:gravity="center_vertical|center_horizontal"
+                android:onClick="loadSignupFragment"
+                android:text="@string/sign_up"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <View
                 android:layout_width="4dp"
@@ -61,36 +55,34 @@
                 android:id="@+id/login_button"
                 android:layout_width="fill_parent"
                 android:layout_height="50dp"
-                android:layout_alignTop="@+id/signup_button"
-                android:layout_toEndOf="@+id/signup_button"
                 android:layout_weight=".495"
                 android:background="@color/appRedDark"
                 android:clickable="true"
                 android:gravity="center_vertical|center_horizontal"
-                android:text="Log In"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:onClick="loadLoginFragment" />
+                android:onClick="loadLoginFragment"
+                android:text="@string/log_in"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
         </LinearLayout>
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout_alignStart="@+id/login_linear_layout"
         android:layout_below="@+id/login_linear_layout"
         android:background="@color/appRed"
-        android:orientation="vertical"
-        android:id="@+id/fragment_container">
+        android:orientation="vertical">
 
         <!--FRAGMENT WILL GO HERE-->
 
         <!--<fragment-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:name="org.eecs499.russtrup.ketchup.SignupFragment"-->
-            <!--android:id="@+id/fragment"-->
-            <!--android:layout_gravity="center_horizontal" />-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:name="org.eecs499.russtrup.ketchup.SignupFragment"-->
+        <!--android:id="@+id/fragment"-->
+        <!--android:layout_gravity="center_horizontal" />-->
     </LinearLayout>
+
 
 </RelativeLayout>
