--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,27 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true">
 
+    <LinearLayout
+        android:id="@+id/toolbarWrapper"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+
+        <!-- Application toolbar-->
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar" />
+
+    </LinearLayout>
 
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawerLayout"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-
+        android:layout_below="@+id/toolbarWrapper"
         android:background="@color/background_material_light">
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <!-- Application toolbar-->
-            <include
-                android:id="@+id/toolbar"
-                layout="@layout/toolbar" />
-
-        </LinearLayout>
 
 
         <!-- The main content view -->
@@ -35,8 +34,7 @@
         <!--Navigation Drawer-->
         <android.support.v7.widget.RecyclerView
             android:id="@+id/left_drawer"
-            class="android.support.v7.widget.RecyclerView"
-            android:layout_width="320dp"
+            android:layout_width="300dp"
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:background="#333"
