--- a/app/src/main/res/layout/fragment_find_shows.xml
+++ b/app/src/main/res/layout/fragment_find_shows.xml
@@ -1,16 +1,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.eecs499.russtrup.ketchup.FindShowsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Find Shows"
-        android:id="@+id/textView3"
+        android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:text="@string/find_shows"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
 </RelativeLayout>
