--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -12,10 +12,11 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:hint="email address"
-        android:inputType="textEmailAddress" >
+        android:hint="@string/email_address_prompt"
+        android:inputType="textEmailAddress">
+
         <requestFocus />
-        </EditText>
+    </EditText>
 
     <EditText
         android:id="@+id/signup_fragment_password1"
@@ -25,7 +26,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="password"
+        android:hint="@string/password_prompt"
         android:inputType="textPassword" />
 
     <EditText
@@ -36,7 +37,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="retype password"
+        android:hint="@string/retype_password_prompt"
         android:inputType="textPassword" />
 
     <TextView
@@ -48,7 +49,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginTop="20dp"
         android:clickable="true"
-        android:text="Sign Up"
+        android:text="@string/sign_up"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/appAccent"
         android:textSize="25sp" />
