--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -39,8 +39,9 @@
         android:layout_below="@+id/login_fragment_password"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/submitlogin_ripple"
         android:clickable="true"
-        android:onClick="logInUser"
+        android:padding="10dp"
         android:text="@string/log_in"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@color/appAccent"
