--- a/app/src/main/res/layout/fragment_find_shows.xml
+++ b/app/src/main/res/layout/fragment_find_shows.xml
@@ -1,15 +1,132 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="org.eecs499.russtrup.ketchup.FindShowsFragment">
+    android:id="@+id/scrollView"
+    android:scrollbars="none"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/find_shows"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="10dp"
+        tools:context="org.eecs499.russtrup.ketchup.FindShowsFragment">
+
+        <EditText
+            android:id="@+id/findShows_searchbar"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_alignParentTop="true"
+            android:textSize="25sp"
+            android:textColor="#cdcdcd" />
+
+        <TextView
+            android:id="@+id/airingToday_subtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/findShows_searchbar"
+            android:layout_marginTop="20dp"
+            android:text="Airing Today"
+            android:textColor="#565656"
+            android:textIsSelectable="false"
+            android:textSize="25sp" />
+
+        <HorizontalScrollView
+            android:id="@+id/horizontalScrollView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/airingToday_subtitle">
+
+            <LinearLayout
+                android:id="@+id/linearLayout"
+                android:layout_width="fill_parent"
+                android:layout_height="200dp"
+
+                android:layout_marginTop="20dp"
+                android:background="#565656"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="128dp"
+                    android:layout_height="150dp"
+                    android:background="#003399" />
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="128dp"
+                    android:layout_height="150dp"
+                    android:background="#990033" />
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="128dp"
+                    android:layout_height="150dp"
+                    android:background="#339900" />
+
+                <ImageView
+                    android:id="@+id/imageView8"
+                    android:layout_width="128dp"
+                    android:layout_height="150dp"
+                    android:background="#993300" />
+
+            </LinearLayout>
+        </HorizontalScrollView>
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/horizontalScrollView"
+            android:layout_marginTop="20dp"
+            android:text="Most Popular"
+            android:textColor="#565656"
+            android:textSize="25sp" />
+
+        <HorizontalScrollView
+            android:id="@+id/horizontalScrollView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/textView">
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="200dp"
+                android:layout_marginTop="20dp"
+                android:background="#565656"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="128dp"
+                    android:layout_height="150dp"
+                    android:background="#330099" />
+
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:layout_width="128dp"
+                    android:layout_height="150dp"
+                    android:background="#009999" />
+
+                <ImageView
+                    android:id="@+id/imageView6"
+                    android:layout_width="128dp"
+                    android:layout_height="150dp"
+                    android:background="#330033" />
+
+                <ImageView
+                    android:id="@+id/imageView7"
+                    android:layout_width="128dp"
+                    android:layout_height="150dp"
+                    android:background="#990099" />
+            </LinearLayout>
+
+        </HorizontalScrollView>
+
+    </RelativeLayout>
+
+</ScrollView>
+
