--- a/app/src/main/res/layout/fragment_find_shows.xml
+++ b/app/src/main/res/layout/fragment_find_shows.xml
@@ -12,19 +12,22 @@
         tools:context="org.eecs499.russtrup.ketchup.FindShowsFragment">
 
         <EditText
-            android:id="@+id/findShows_searchbar"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:id="@+id/search_searchbar"
+            android:layout_width="250dp"
+            android:layout_height="40dp"
             android:layout_alignParentTop="true"
             android:textSize="25sp"
-            android:textColor="#cdcdcd" />
+            android:hint="Search..."
+            android:textColor="#565656"
+            android:textColorHint="#787878"
+            android:paddingBottom="5dp" />
 
         <TextView
             android:id="@+id/airingToday_subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/findShows_searchbar"
+            android:layout_below="@+id/search_searchbar"
             android:layout_marginTop="20dp"
             android:text="Airing Today"
             android:textColor="#565656"
@@ -125,6 +128,14 @@
             </LinearLayout>
 
         </HorizontalScrollView>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Search"
+            android:id="@+id/findShows_btn"
+            android:layout_alignBottom="@+id/search_searchbar"
+            android:layout_toEndOf="@+id/search_searchbar" />
 
     </RelativeLayout>
 
