--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -47,19 +47,14 @@
         android:layout_alignParentEnd="true">
 
         <LinearLayout
+            android:id="@+id/searchResultsList"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <!-- Result fragments here -->
+
         </LinearLayout>
     </ScrollView>
-
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="300dp"
-        android:id="@+id/searchResults"
-        android:layout_alignTop="@+id/scrollView2"
-        android:layout_alignParentStart="true" />
-
 
 </RelativeLayout>
