--- a/app/src/main/res/layout/fragment_my_shows.xml
+++ b/app/src/main/res/layout/fragment_my_shows.xml
@@ -16,39 +16,11 @@
         android:layout_alignParentTop="true">
 
         <LinearLayout
+            android:id="@+id/myShowsList"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <include
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                layout="@layout/fragment_my_shows_listitem"
-                android:layout_marginTop="10dp" />
-
-            <include
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                layout="@layout/fragment_my_shows_listitem"
-                android:layout_marginTop="10dp" />
-
-            <include
-                layout="@layout/fragment_my_shows_listitem"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp" />
-
-            <include
-                layout="@layout/fragment_my_shows_listitem"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp" />
-
-            <include
-                layout="@layout/fragment_my_shows_listitem"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp" />
         </LinearLayout>
 
     </ScrollView>
