--- a/app/src/main/res/layout/fragment_my_shows.xml
+++ b/app/src/main/res/layout/fragment_my_shows.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="10dp"
@@ -7,8 +8,8 @@
     tools:context="org.eecs499.russtrup.ketchup.MyShowsFragment">
 
 
-    <ScrollView
-        android:id="@+id/scrollView2"
+    <com.melnykov.fab.ObservableScrollView
+        android:id="@+id/myShowsScrollView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -19,10 +20,27 @@
             android:id="@+id/myShowsList"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"/>
 
-        </LinearLayout>
+    </com.melnykov.fab.ObservableScrollView>
 
-    </ScrollView>
+
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:src="@drawable/ic_plus"
+        fab:fab_colorNormal="@color/appAccent"
+        fab:fab_colorPressed="@color/appAccentDark"
+        fab:fab_colorRipple="@color/appAccent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/myShowsScrollView"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="38dp" />
 
 </RelativeLayout>
