--- a/app/src/main/res/layout/fragment_my_shows_listitem.xml
+++ b/app/src/main/res/layout/fragment_my_shows_listitem.xml
@@ -2,17 +2,18 @@
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="fill_parent"
-android:layout_height="100dp"
-android:layout_marginTop="10dp"
-android:background="#898989">
+android:layout_height="80dp"
+android:layout_marginTop="5dp"
+android:layout_marginBottom="5dp"
+android:background="#454545">
 
     <ImageView
         android:id="@+id/showThumbnail"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="80dp"
+        android:layout_height="fill_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="#003399"
+        android:background="#ffc2c1c5"
         android:contentDescription="TV Show Thumbnail" />
 
     <TextView
@@ -21,7 +22,7 @@ android:background="#898989">
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/showThumbnail"
         android:text="Better Call Saul"
         android:textAppearance="?android:attr/textAppearanceLarge" />
