--- a/app/src/main/res/layout/fragment_search_result.xml
+++ b/app/src/main/res/layout/fragment_search_result.xml
@@ -1,19 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="100dp"
-    android:layout_marginTop="10dp"
-    android:background="#898989">
-
-    <ImageView
-        android:id="@+id/showThumbnail"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="#003399"
-        android:contentDescription="TV Show Thumbnail" />
+    android:layout_height="80dp"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp"
+    android:background="#454545">
 
     <TextView
         android:id="@+id/showTitle"
@@ -21,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/showThumbnail"
         android:text="Better Call Saul"
         android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -45,5 +36,28 @@
         android:layout_marginTop="5dp"
         android:text="AMC"
         android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <ImageView
+        android:id="@+id/addShowBtn"
+        android:layout_width="48dp"
+        android:layout_height="80dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:background="#00676767"
+        android:contentDescription="Add Show"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_plus" />
+
+    <ImageView
+        android:id="@+id/removeShowBtn"
+        android:layout_width="48dp"
+        android:layout_height="80dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:background="#00676767"
+        android:contentDescription="Remove Show"
+        android:scaleType="centerInside"
+        android:src="@drawable/ic_action_remove"
+        android:visibility="gone" />
 
 </RelativeLayout>
