--- a/app/src/main/res/layout/fragment_my_shows_listitem.xml
+++ b/app/src/main/res/layout/fragment_my_shows_listitem.xml
@@ -5,7 +5,7 @@ android:layout_width="fill_parent"
 android:layout_height="80dp"
 android:layout_marginTop="5dp"
 android:layout_marginBottom="5dp"
-android:background="#454545">
+android:background="@drawable/myshow_list_item_ripple">
 
     <ImageView
         android:id="@+id/showThumbnail"
@@ -33,7 +33,7 @@ android:background="#454545">
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/showTitle"
         android:layout_below="@+id/showTitle"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="6dp"
         android:text="Monday @ 10:00 PM"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -43,8 +43,20 @@ android:background="#454545">
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/showTime"
         android:layout_below="@+id/showTime"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="0dp"
         android:text="AMC"
         android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <ImageButton
+        android:layout_width="25dp"
+        android:layout_height="30dp"
+        android:background="@drawable/myshow_list_item_ripple"
+        android:id="@+id/item_settings"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="5dp"
+        android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
+        android:padding="5dp" />
 
 </RelativeLayout>
