--- a/app/src/main/res/layout/fragment_search_result.xml
+++ b/app/src/main/res/layout/fragment_search_result.xml
@@ -16,6 +16,7 @@
         android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/showThumbnail"
         android:text="Better Call Saul"
+        android:inputType="textNoSuggestions"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
@@ -24,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/showTitle"
         android:layout_below="@+id/showTitle"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="6dp"
         android:text="Monday @ 10:00 PM"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -34,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/showTime"
         android:layout_below="@+id/showTime"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="0dp"
         android:text="AMC"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
