--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="gradient_start">#838383</color>
     <color name="navItemBackground">#333333</color>
     <color name="myShowItemBackground">#454545</color>
+    <color name="imageTextBackground">#77000000</color>
 </resources>
