--- a/app/src/main/res/layout/fragment_my_shows_listitem.xml
+++ b/app/src/main/res/layout/fragment_my_shows_listitem.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="fill_parent"
-android:layout_height="80dp"
-android:layout_marginTop="5dp"
-android:layout_marginBottom="5dp"
-android:background="@drawable/myshow_list_item_ripple">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/itemLayout"
+    android:layout_width="fill_parent"
+    android:layout_height="80dp"
+    android:layout_marginBottom="5dp"
+    android:layout_marginTop="5dp"
+    android:background="@drawable/myshow_list_item_ripple">
 
     <ImageView
         android:id="@+id/showThumbnail"
@@ -24,8 +24,8 @@ android:background="@drawable/myshow_list_item_ripple">
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_toEndOf="@+id/showThumbnail"
-        android:text="Better Call Saul"
         android:inputType="textNoSuggestions"
+        android:text="Better Call Saul"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
@@ -49,24 +49,24 @@ android:background="@drawable/myshow_list_item_ripple">
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <ImageButton
+        android:id="@+id/item_options"
         android:layout_width="25dp"
         android:layout_height="30dp"
-        android:background="@drawable/myshow_list_item_ripple"
-        android:id="@+id/item_options"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="11dp"
         android:layout_marginRight="6dp"
-        android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
-        android:padding="5dp" />
+        android:background="@drawable/myshow_list_item_ripple"
+        android:padding="5dp"
+        android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha" />
 
     <FrameLayout
         android:id="@+id/unsubscribe_menu_wrapper"
-        android:orientation="horizontal"
         android:layout_width="200dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="12dp"
         android:layout_above="@+id/item_options"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="12dp"
+        android:orientation="horizontal" />
 
 </RelativeLayout>
