--- a/app/src/main/res/layout/fragment_show_info_header.xml
+++ b/app/src/main/res/layout/fragment_show_info_header.xml
@@ -1,21 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/showInfoHeaderImage"
-        android:layout_width="match_parent"
-        android:layout_height="176dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="#37FDFC" />
+    <LinearLayout
+        android:id="@+id/image_header_wrapper"
+        android:layout_width="fill_parent"
+        android:layout_height="200dp"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/showInfoHeaderImage"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:adjustViewBounds="true"
+            android:background="#37FDFC"
+            android:maxHeight="200dp"
+            android:scaleType="centerCrop" />
+    </LinearLayout>
 
     <View
         android:id="@+id/showInfoHeaderTextBackground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/showInfoHeaderImage"
+        android:layout_alignBottom="@+id/image_header_wrapper"
         android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/showInfoAirTime"
         android:layout_marginTop="-16dp"
@@ -25,7 +36,7 @@
         android:id="@+id/showInfoShowName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/showInfoHeaderImage"
+        android:layout_alignBottom="@+id/image_header_wrapper"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
@@ -38,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/showInfoAirTime"
-        android:layout_alignBottom="@+id/showInfoHeaderImage"
+        android:layout_alignBottom="@+id/image_header_wrapper"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
@@ -50,11 +61,11 @@
         android:id="@+id/showInfoAirTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/showInfoShowName"
+        android:layout_alignParentEnd="true"
         android:layout_marginRight="16dp"
         android:text="Day @ Time"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_above="@+id/showInfoShowName"
-        android:layout_alignParentEnd="true"
         android:textSize="14sp" />
 
 </RelativeLayout>
