--- a/app/src/main/res/layout/fragment_show_info_header_condensed.xml
+++ b/app/src/main/res/layout/fragment_show_info_header_condensed.xml
@@ -3,18 +3,29 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/showInfoHeaderImage"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/image_header_wrapper"
+        android:layout_width="fill_parent"
         android:layout_height="66dp"
-        android:layout_alignParentStart="true"
-        android:background="#37FDFC" />
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/showInfoHeaderImage"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:adjustViewBounds="true"
+            android:background="#37FDFC"
+            android:maxHeight="66dp"
+            android:scaleType="centerCrop" />
+    </LinearLayout>
 
     <View
         android:id="@+id/showInfoHeaderTextBackground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/showInfoHeaderImage"
+        android:layout_alignBottom="@+id/image_header_wrapper"
         android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/showInfoAirTime"
         android:layout_marginTop="-16dp"
@@ -24,7 +35,7 @@
         android:id="@+id/showInfoShowName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/showInfoHeaderImage"
+        android:layout_alignBottom="@+id/image_header_wrapper"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="16dp"
@@ -37,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/showInfoAirTime"
-        android:layout_alignBottom="@+id/showInfoHeaderImage"
+        android:layout_alignBottom="@+id/image_header_wrapper"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
