--- a/app/src/main/res/layout/fragment_my_shows_listitem.xml
+++ b/app/src/main/res/layout/fragment_my_shows_listitem.xml
@@ -7,14 +7,22 @@
     android:layout_marginTop="5dp"
     android:background="@drawable/myshow_list_item_ripple">
 
-    <ImageView
-        android:id="@+id/showThumbnail"
+    <LinearLayout
+        android:id="@+id/thumbnail_wrapper"
         android:layout_width="53dp"
         android:layout_height="fill_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="#ffc2c1c5"
-        android:contentDescription="TV Show Thumbnail" />
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/showThumbnail"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:adjustViewBounds="true"
+            android:background="#ffc2c1c5"
+            android:scaleType="centerCrop" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/showTitle"
@@ -23,7 +31,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
-        android:layout_toEndOf="@+id/showThumbnail"
+        android:layout_toEndOf="@+id/thumbnail_wrapper"
         android:ellipsize="marquee"
         android:focusable="true"
         android:focusableInTouchMode="true"
