--- a/app/src/main/res/layout/fragment_show_info_header.xml
+++ b/app/src/main/res/layout/fragment_show_info_header.xml
@@ -17,7 +17,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:adjustViewBounds="true"
-            android:background="#37FDFC"
+            android:background="@color/cardview_dark_background"
             android:maxHeight="200dp"
             android:scaleType="centerCrop" />
     </LinearLayout>
