--- a/app/src/main/res/layout/fragment_show_info_header_condensed.xml
+++ b/app/src/main/res/layout/fragment_show_info_header_condensed.xml
@@ -16,7 +16,7 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:adjustViewBounds="true"
-            android:background="#37FDFC"
+            android:background="@color/cardview_dark_background"
             android:maxHeight="66dp"
             android:scaleType="centerCrop" />
     </LinearLayout>
