--- a/app/src/main/res/layout/fragment_show_info_episode_list_item.xml
+++ b/app/src/main/res/layout/fragment_show_info_episode_list_item.xml
@@ -8,14 +8,14 @@
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/show_info_card_view"
         android:layout_width="fill_parent"
-        android:layout_height="66dp"
+        android:layout_height="55dp"
         android:layout_gravity="center"
         card_view:cardBackgroundColor="@color/background_material_dark">
 
         <RelativeLayout
             android:background="@drawable/myshow_list_item_ripple"
             android:layout_width="wrap_content"
-            android:layout_height="66dp">
+            android:layout_height="55dp">
 
             <TextView
                 android:id="@+id/show_info_episode_name"
@@ -23,9 +23,10 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="8dp"
                 android:text="Oxymandias (05x12)"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/show_info_episode_airdatetime"
@@ -34,7 +35,8 @@
                 android:layout_alignStart="@+id/show_info_episode_name"
                 android:layout_below="@+id/show_info_episode_name"
                 android:text="05/24/2014 @ 9:00 PM"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textSize="12sp" />
 
             <ImageButton
                 android:id="@+id/show_info_update_button"
