--- a/app/src/main/res/layout/fragment_show_info_manage.xml
+++ b/app/src/main/res/layout/fragment_show_info_manage.xml
@@ -14,50 +14,72 @@
     </LinearLayout>
 
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/show_info_header_wrapper"
-        android:id="@+id/relativeLayout">
+        android:background="@drawable/dark_list_item_ripple">
 
         <Spinner
             android:id="@+id/season_spinner"
-            android:layout_width="200dp"
+            android:layout_width="140dp"
             android:layout_height="44dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="16dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginBottom="16dp" />
-
-        <ImageButton
-            android:id="@+id/markAllWatchedBtn"
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp" />
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true" />
 
         <ImageButton
             android:id="@+id/markAllUnwatchedBtn"
             android:layout_width="44dp"
             android:layout_height="44dp"
-            android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/markAllWatchedBtn"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp" />
+            android:layout_marginRight="18dp"
+            android:background="@drawable/dark_list_item_ripple"
+            android:src="@drawable/ic_eraser"
+            android:layout_alignTop="@+id/markAllWatchedBtn"
+            android:layout_alignEnd="@+id/textView8" />
+
+        <ImageButton
+            android:id="@+id/markAllWatchedBtn"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:layout_marginRight="48dp"
+            android:background="@drawable/dark_list_item_ripple"
+            android:src="@drawable/ic_check_all"
+            android:layout_alignTop="@+id/season_spinner"
+            android:layout_toStartOf="@+id/markAllUnwatchedBtn" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Mark All Watched"
+            android:id="@+id/textView4"
+            android:textSize="9sp"
+            android:layout_alignTop="@+id/textView8"
+            android:layout_toStartOf="@+id/textView8"
+            android:layout_marginRight="16dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Mark All Unwatched"
+            android:id="@+id/textView8"
+            android:layout_marginEnd="12dp"
+            android:textSize="9sp"
+            android:layout_below="@+id/markAllUnwatchedBtn"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="12dp" />
     </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/episode_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/relativeLayout"
-        android:layout_alignParentStart="true" />
+        android:scrollbars="vertical" />
 
 
 </RelativeLayout>
